--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               <!-- IMAGE AND TEXT CARD -->
               <div
                 class="card bg-transparent mb-5 scale-card"
-                onclick="window.location.href='tn-relationships.HTML';"
+                onclick="window.location.href='tn-relationships.html';"
                 data-aos="zoom-in-up">
                 <div class="bg-dark shadow rounded-5 p-0 cliccablebox">
                   <img
