--- a/loadingtest.html
+++ b/loadingtest.html
@@ -169,8 +169,7 @@
               width="auto"
               height="auto"
               alt="touchnote new app homescreen revamp"
-              class="img-fluid rounded-5"
-              loading="lazy" />
+              class="img-fluid rounded-5" />
           </div>
           <div class="col-12 col-lg-5">
             <h3 class="pt-5">The project</h3>
@@ -209,8 +208,7 @@
               width="auto"
               height="auto"
               alt="TouchNote homescreen project"
-              class="img-fluid rounded-4"
-              loading="lazy" />
+              class="img-fluid rounded-4" />
           </div>
         </div>
         <!-- TWO COLUMNS - IMAGE AND TEXT -->
@@ -237,7 +235,6 @@
             width="100%"
             height="100%"
             alt="Touchnote new homescreen apps"
-            loading="lazy"
             class="rounded-3 py-vh-3" />
           <p class="text-secondary">
             The final result shown above required a deep study of the users’
@@ -253,7 +250,6 @@
             width="100%"
             height="100%"
             alt="Touchnote homescreen ux"
-            loading="lazy"
             class="rounded-3 py-vh-3" />
         </div>
       </div>
@@ -269,15 +265,13 @@
                 src="img/tn-homescreen-photo1.jpeg"
                 width="450"
                 height="450"
-                alt="touchnote postcards photo"
-                loading="lazy" />
+                alt="touchnote postcards photo" />
               <img
                 class="img-fluid rounded-5 ms-5 mb-n5 shadow"
                 src="img/tn-homescreen-photo2.jpeg"
                 width="450"
                 height="450"
-                alt="touchnote photobook photo"
-                loading="lazy" />
+                alt="touchnote photobook photo" />
             </div>
             <div class="col-12 col-lg-5 bg-dark rounded-5 py-5">
               <h4 class="display-4">New imagery</h4>
@@ -309,7 +303,6 @@
             width="100%"
             height="100%"
             alt="Touchnote new homescreen apps"
-            loading="lazy"
             class="rounded-3 py-vh-1" />
         </div>
       </div>
