mobile render fixes

--- a/peekaboo.html
+++ b/peekaboo.html
@@ -151,7 +151,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               class="img-fluid rounded-5"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-6" data-aos="fade-left">
+          <div class="col-12 col-lg-6" data-aos="fade">
             <h3 class="pt-5">The project</h3>
             <p class="text-secondary">
               Peekaboo is the ultimate baby name app, designed with future
@@ -193,7 +193,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               everyone.
             </p>
           </div>
-          <div class="col-12 col-lg-6" data-aos="fade-left">
+          <div class="col-12 col-lg-6" data-aos="fade">
             <img
               src="img/peekaboo-02.jpg"
               width="auto"
@@ -307,7 +307,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
       <div class="bg-dark">
         <div class="container px-vw-5 py-vh-5">
           <div class="row d-flex align-items-center">
-            <div class="col-12 col-lg-6 text-lg-end" data-aos="fade-right">
+            <div class="col-12 col-lg-6 text-lg-end">
               <h3 class="pt-5">Membership model</h3>
               <p class="text-secondary">
                 The app is free to use, but after 10 swipes, users will
@@ -318,7 +318,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                 end of the year. Stay tuned for updates!
               </p>
             </div>
-            <div class="col-12 col-lg-6" data-aos="fade-left">
+            <div class="col-12 col-lg-6">
               <img
                 src="img/Peekaboo-8.png"
                 width="100%"
