mobile render fixes

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                   class="img-fluid rounded-5"
                   loading="lazy" />
               </div>
-              <div class="col-12 col-lg-7" data-aos="fade-left">
+              <div class="col-12 col-lg-7" data-aos="fade">
                 <h3 class="pt-5">Gaspare Frazzitta</h3>
                 <p class="text-secondary">
                   UX/UI product designer with an extensive experience in
@@ -198,7 +198,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                 <!-- END LEFT COLUMN -->
 
                 <!-- RIGHT COLUMN -->
-                <div class="col-12 col-md-6" data-aos="fade-left">
+                <div class="col-12 col-md-6" data-aos="fade">
                   <!-- SQUARE BACKGROUND TEXT ONLY BOX -->
                   <div class="col-12 bg-black p-5 mt-5">
                     <p class="text-tertiary"></p>
@@ -237,7 +237,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                 clients like Sainsbury's in the UK and Tesla in the US.
               </p>
             </div>
-            <div class="col-12 col-lg-5" data-aos="fade-left">
+            <div class="col-12 col-lg-5" data-aos="fade">
               <div class="py-vh-1"></div>
 
               <img
