--- a/layout.html
+++ b/layout.html
@@ -170,7 +170,7 @@
                 aliquyam erat, sed diam voluptua.
               </h2>
             </div>
-            <div class="col-12 col-lg-5" data-aos="fade-left">
+            <div class="col-12 col-lg-5" data-aos="fade-right">
               <h3 class="pt-5">Product Design & Strategy</h3>
               <p class="text-secondary">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
@@ -203,7 +203,7 @@
               class="img-fluid rounded-5"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade-right">
             <h3 class="pt-5">Product Design & Strategy</h3>
             <p class="text-secondary">
               Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
