--- a/memory-game.html
+++ b/memory-game.html
@@ -183,7 +183,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               illusions.
             </p>
           </div>
-          <div class="col-12 col-lg-6" data-aos="fade-left">
+          <div class="col-12 col-lg-6" data-aos="fade">
             <iframe
               width="500"
               height="300"
