--- a/scanfood-app.html
+++ b/scanfood-app.html
@@ -152,7 +152,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               loading="lazy" />
             
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade">
             <p class="text-secondary">
               People suffering from an intolerance find shopping food
               frustrating. ScanFood is a little app developed to help people
