--- a/tn-homescreen.html
+++ b/tn-homescreen.html
@@ -153,7 +153,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               class="img-fluid rounded-5"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade">
             <h3 class="pt-5">The project</h3>
             <p class="text-secondary">
               TouchNote's updated homescreen is the result of a careful and
@@ -186,7 +186,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               behavior.
             </p>
           </div>
-          <div class="col-12 col-lg-6" data-aos="fade-left">
+          <div class="col-12 col-lg-6" data-aos="fade">
             <img
               src="img/tn-homescreen02.jpeg"
               width="auto"
