--- a/tn-order-history.html
+++ b/tn-order-history.html
@@ -151,7 +151,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               class="img-fluid rounded-5"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade-right>
             <h3 class="pt-5">The project</h3>
             <p class="text-secondary">
               The redesign of TouchNote’s order history has been one of the most
@@ -217,7 +217,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                 complete restructuring of the whole experience.
               </p>
             </div>
-            <div class="col-12 col-lg-5" data-aos="fade-left">
+            <div class="col-12 col-lg-5" data-aos="fade">
               <img
                 src="img/tn-order-old1.jpg"
                 width="100%"
@@ -258,7 +258,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               </p>
             </div>
 
-            <div class="col-12 col-lg-7" data-aos="fade-left">
+            <div class="col-12 col-lg-7" data-aos="fade">
               <p class="text-secondary">
                 <br />
                 “How can I easily go through my multi-orders?” Jacqueline,
@@ -299,7 +299,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                 loading="lazy" />
             </div>
 
-            <div class="col-12 col-lg-5" data-aos="fade-left">
+            <div class="col-12 col-lg-5" data-aos="fade">
               <p class="text-secondary">
                 When it was first implemented, the previous Order history had
                 been tailor designed with postcards in mind, where following the
@@ -451,7 +451,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
             width="100%"
             height="100%"
             alt="Touchnote Order history final design image 2"
-            data-aos="fade "
+            data-aos="fade"
             loading="lazy"
             class="rounded-4" />
         </div>
