--- a/touchnote-rebrand.html
+++ b/touchnote-rebrand.html
@@ -234,7 +234,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
                 a quick integration and to retain the motion quality.
               </p>
             </div>
-            <div class="col-12 col-lg-5" data-aos="fade-left">
+            <div class="col-12 col-lg-5" data-aos="fade-right">
               <img
                 src="img/tn-rebrand03.gif"
                 width="100%"
