--- a/zego-milestones.html
+++ b/zego-milestones.html
@@ -171,7 +171,7 @@
               class="img-fluid rounded-5"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5">
+          <div class="col-12 col-lg-5" data-aos="fade">
             <h3 class="pt-5">The project</h3>
             <p class="text-secondary">
               Zego Sense uses location and motion data from users’ mobile
@@ -223,7 +223,7 @@
       <div class="bg-dark">
         <div class="container px-vw-5 py-vh-3">
           <div class="row d-flex align-items-center">
-            <div class="col-12 col-lg-5 text-lg-end" >
+            <div class="col-12 col-lg-5 text-lg-end" data-aos="fade-right">
               <h3 class="pt-5">The challenge</h3>
               <p class="text-secondary">
                 We ran qualitative interviews via remote usertesting.com to find
@@ -233,7 +233,7 @@
                 our potential MVP
               </p>
             </div>
-            <div class="col-12 col-lg-7" >
+            <div class="col-12 col-lg-7" data-aos="fade-right" >
               <img
                 src="img/Zego-usermapping.jpg"
                 width="100%"
@@ -267,7 +267,7 @@
 
       <!-- TWO COLUMNS LAYOUT -->
       <div class="bg-black">
-        <div class="container bg-black px-vw-5 py-vh-3 rounded-5 shadow">
+        <div class="container bg-black px-vw-5 py-vh-3 rounded-5 shadow" data-aos="fade">
           <div class="row gx-5">
             <!-- LEFT COLUMN -->
             <div class="col-12 col-md-6">
@@ -334,7 +334,7 @@
     
       <!-- TWO COLUMNS LAYOUT -->
       <div class="bg-black">
-        <div class="container bg-black px-vw-5 py-vh-3 rounded-5 shadow">
+        <div class="container bg-black px-vw-5 py-vh-3 rounded-5 shadow" data-aos="fade">
           <div class="row gx-5">
             <!-- LEFT COLUMN -->
             <div class="col-12 col-md-6">
@@ -403,9 +403,9 @@
       <!-- FULL WIDTH IMAGE -->
 
       <!-- TWO COLUMNS - IMAGE AND TEXT -->
-      <div class="container px-vw-5 py-vh-5">
-        <div class="row d-flex align-items-center">
-          <div class="col-12 col-lg-7 text-lg-end">
+      <div class="container px-vw-5 py-vh-5" >
+        <div class="row d-flex align-items-center" >
+          <div class="col-12 col-lg-7 text-lg-end" data-aos="fade-right">
             <img
               src="img/Z_Milestones_animation.gif"
               width="auto"
@@ -429,7 +429,7 @@
       <!-- SINGLE BOX IMAGE AND DESCRIPTION CENTERED -->
       <div class="container bg-black px-vw-5 rounded-5 shadow">
         <div class="card bg-transparent mb-5" >
-          <div class="bg-dark shadow rounded-5 p-0">
+          <div class="bg-dark shadow rounded-5 p-0" data-aos="fade">
             <div class="p-5">
               <h3 class="pt-5">Metrics of success</h3>
               <p class="pb-4 text-secondary">
