--- a/zego-sense.html
+++ b/zego-sense.html
@@ -335,7 +335,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               class="img-fluid rounded-2 no-top-radius"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade-right">
             <h3 class="h6">Driver score gauge</h3>
             <p class="text-tertiary">
               A simple visual indicator with 5 colour buckets to reflect user’s
