--- a/tn-family-plans.html
+++ b/tn-family-plans.html
@@ -153,7 +153,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               class="img-fluid rounded-5"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade">
             <h3 class="pt-5">The project</h3>
             <p class="text-secondary">
               TouchNote is a best-in-class card sending app helping the world
@@ -187,7 +187,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               sprints, including iOS, Android and web adaptation.
             </p>
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade">
             <img
               src="img/tn-family-comp.jpeg"
               width="auto"
@@ -287,7 +287,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               class="img-fluid rounded-2 no-top-radius"
               loading="lazy" />
           </div>
-          <div class="col-12 col-lg-5" data-aos="fade-left">
+          <div class="col-12 col-lg-5" data-aos="fade">
             <h3 class="h6">Promoting the new plan</h3>
             <p class="text-tertiary">
               Design a simple, inviting promotion landing page to showcase how
