--- a/tn-homescreen.html
+++ b/tn-homescreen.html
@@ -381,6 +381,11 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
         duration: 800, // values from 0 to 3000, with step 50ms
       });
     </script> 
+	  
+	  <script
+    src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+    integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+    crossorigin="anonymous"></script>
 
     <!-- SCRIPTS -->
   <script>
