--- a/indeed-schedule.html
+++ b/indeed-schedule.html
@@ -185,14 +185,14 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               </p>
             </div>
 
-            <div class="col-12 col-lg-5" data-aos="fade-left">
+            <div class="col-12 col-lg-5" data-aos="fade-right">
               <p class="text-secondary">
                 <!-- RATING CARD WITH GRADIENT BG -->
               </p>
 
               <div
                 class="rounded-5 bg-black p-4 shadow gradientindeed"
-                data-aos="zoom-in-left">
+                data-aos="zoom-in-right">
                 <p class="lead">
                   “I can't easy identify my planned shifts and workers”
                 </p>
@@ -358,7 +358,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
               </p>
             </div>
 
-            <div class="col-12 col-lg-7" data-aos="fade-left">
+            <div class="col-12 col-lg-7" data-aos="fade-right">
               <img
                 src="img/indeed-flex-8.png"
                 width="100%"
