enable flex box

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
       <!-- FEATURED SINGLE COLUMN BOX -->
 
       <!-- FEATURED SINGLE COLUMN BOX -->
-      <div class="bg-black" id="portfolioboxes" style="display: none;">
+      <div class="bg-black" id="portfolioboxes">
         <div class="container bg-black px-vw-5 rounded-5 shadow">
           <div
             class="card bg-transparent mb-5 scale-card"
