General updates (unhide homepage card & about)

--- a/about.html
+++ b/about.html
@@ -248,24 +248,20 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
 
       <!-- TWO COLUMNS - LARGE TEXT AND SMALLER TEXTS -->
       <div class="bg-black">
-        <div class="container px-vw-5 py-vh-5">
+        <div class="container px-vw-5 py-vh-3">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-lg-7 text-lg-end" data-aos="fade-right">
               <span class="h6 darkerspan">Current position</span>
-              <h3 class="pt-5">Senior UX designer @Indeed</h3>
+              <h3 class="pt-5">Principle Product designer @Pearson</h3>
               <p class="text-secondary">
-                Indeed, with it's global reach and commitment to connecting job
-                seekers and empleyers, is the world's leading job search
-                platform. My primary responsibility is leading the design &
-                experience of the Indeed Flex Client Portal, which serves major
-                clients like Sainsbury's in the UK and Tesla in the US.
+                Global leader in education, Pearson is dedicated to providing learning materials, digital services and assessments for students, educators and institutions worldwide. I lead the design for Versant English assessment courses and tests, ensuring an exceptional user experience for both clients and learners.
               </p>
             </div>
             <div class="col-12 col-lg-5" data-aos="fade">
               <div class="py-vh-1"></div>
 
               <img
-                src="img/about-2.jpg"
+                src="img/pearson01.jpg"
                 width="100%"
                 height="auto"
                 alt="abstract image"
@@ -276,6 +272,39 @@ url("fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+
         </div>
       </div>
       <!-- TWO COLUMNS - LARGE TEXT AND SMALLER TEXTS -->
+
+       <!-- TWO COLUMNS - LARGE TEXT AND SMALLER TEXTS -->
+       <div class="bg-black">
+        <div class="container px-vw-5 py-vh-3">
+          <div class="row d-flex align-items-center">
+            <div class="col-12 col-lg-5 text-lg-end" data-aos="fade-right">
+              
+              <img
+                src="img/about-2.jpg"
+                width="100%"
+                height="auto"
+                alt="TouchNote Relationships"
+                class="img-fluid rounded-2 no-top-radius"
+                loading="lazy" />
+            </div>
+
+            <div class="col-12 col-lg-7" data-aos="fade">
+              <span class="h6 darkerspan">Previously</span>
+              <h3 class="pt-5">Senior UX designer @Indeed</h3>
+
+              <p class="text-secondary">
+                Indeed, with it's global reach and commitment to connecting job
+                seekers and empleyers, is the world's leading job search
+                platform. My primary responsibility was to lead the design &
+                experience of the Indeed Flex Client Portal, which serves major
+                clients like Sainsbury's in the UK and Tesla in the US.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- TWO COLUMNS - LARGE TEXT AND SMALLER TEXTS -->
+
       <!-- InstanceEndEditable -->
 	<!-- CONTENT -->
 	
